feat: inline sql editor execution context